--- a/src/styles/global/variables.scss
+++ b/src/styles/global/variables.scss
@@ -11,6 +11,8 @@ $border: 1px solid rgba(128, 128, 128, 0.38);
 $main-bg: linear-gradient(to bottom, #000055 0%, #003099 100%);
 //---------------------------
 $sidebar-bg: linear-gradient(to bottom, #0296d4 0%, #98efe7 100%);
+$page-title-color: #2fa695;
+$page-background-color: #dcdcdc;
 
 //font-size-px
 $size-px-0: 0px;
