--- a/src/styles/global/app.scss
+++ b/src/styles/global/app.scss
@@ -7,6 +7,7 @@ html, body {
   font-family: $font-family;
   font-size: $size-rem-1;
   font-weight: 500;
+  background:$page-background-color;
 }
 
 .app{
@@ -14,4 +15,31 @@ html, body {
   // justify-content: flex-start;
   // flex-wrap: wrap;
   // position: relative;
+}
+.main-page{
+  height: 100vh;
+  margin-left: 240px;
+}
+
+.header-wrapper{
+  padding: 10px;
+}
+.page-body-wrapper{
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+.collapsed{
+  .main-page{
+    margin-left: 72px;
+  }
+}
+
+.dot{
+  height: 10px;
+  width: 10px;
+  padding: 0px !important;
+  background: red;
+  border-radius: 50%;
+  display: inline-block;
 }
