Invoice page done

--- a/src/styles/global/index.scss
+++ b/src/styles/global/index.scss
@@ -1,4 +1,6 @@
 @import './variables.scss';
+@import './spacing.scss';
+@import './customTable.scss';
 @import './app.scss';
 @import './button.scss';
 @import './sidebar.scss';
