--- a/src/styles/global/app.scss
+++ b/src/styles/global/app.scss
@@ -34,7 +34,9 @@ html, body {
     margin-left: 72px;
   }
 }
-
+.page-title{
+  color: $page-title-color;
+}
 .dot{
   height: 10px;
   width: 10px;
@@ -42,4 +44,7 @@ html, body {
   background: red;
   border-radius: 50%;
   display: inline-block;
+}
+.text-right{
+  text-align: right;
 }
