--- a/src/styles/components/setting.scss
+++ b/src/styles/components/setting.scss
@@ -14,6 +14,9 @@
                 color: #fff;
             }
         }
+        .content{
+            text-align: center;
+        }
     }
 }
 
@@ -21,7 +24,7 @@
     border: 1px solid gray;
     border-radius: 5px;
     .header{
-        background: rgba(128, 128, 128, 0.44);
+        background: #b0adad;
         text-align: center;
         color: #fff;
         font-size: 1.2rem;
@@ -32,6 +35,8 @@
     .content{
         height: 0;
         overflow: hidden;
+        background: #fff;
+        padding: 15px;
     }
     &.expanded{
         .content{
