--- a/src/styles/global/app.scss
+++ b/src/styles/global/app.scss
@@ -51,3 +51,12 @@ html, body {
 .text-center{
   text-align: center;
 }
+.link{
+  cursor: pointer;
+}
+.paginat{
+  text-align: right;
+}
+.j-c-s-b{
+  justify-content: space-between;
+}
