--- a/src/styles/global/customTable.scss
+++ b/src/styles/global/customTable.scss
@@ -1,14 +1,19 @@
+.table-wrapper{
+    display: block;
+    overflow: auto;
+}
 .content-header{
     display: flex;
     justify-content: space-between;
     color: gray;
+    min-width: 600px;
     .cell{
         display: flex;
         flex-basis: 100%;
         align-items: center;
         font-size: 1.3rem;
         span{
-            padding: 10px;
+            padding: 0 5px;
         }
     }
 }
@@ -21,6 +26,7 @@
         background:#fff;
         margin: 30px 0;
         border-radius: 3px;
+        min-width: 600px;
         .cell{
             display: flex;
             flex-basis: 100%;
@@ -28,7 +34,7 @@
             flex-wrap: wrap;
             font-size: 1rem;
             span{
-                padding: 10px;
+                padding: 0 5px;
             }
         }
     }
@@ -36,4 +42,24 @@
 
 .flex-end{
     justify-content: flex-end;
+}
+
+@media only screen and (max-width: 1100px) {
+    .content-header{
+        .cell{
+            font-size: 1rem;
+            span{
+                padding: 5px;
+            }
+        }
+    }
+    .content-body{
+        .card{
+            padding: 10px;
+            margin: 1rem 0;
+            .cell{
+                font-size: .7rem;
+            }
+        }
+    }
 }
