--- a/src/styles/global/sidebar.scss
+++ b/src/styles/global/sidebar.scss
@@ -10,7 +10,6 @@
     width: 187px;
     max-width: 240px !important;
     min-width: 240px !important;
-    overflow: auto;
     transition: width 1s  max-width 1s  min-width 1s;
     .content-wrapper{
         padding: 0 10px;
@@ -25,19 +24,16 @@
         color: $white;
         display: flex;
         align-items: center;
-        padding: .81rem 0;
+        margin: 1rem 0;
         cursor:pointer;
         .icon{
             display: inline-block;
-            font-size: 2rem;
+            font-size: 1.7rem;
             text-align: center;
-            width: 100%;
-            min-width: 52px;
-            max-width: 52px;
         }
         .label{
             display: inline-block;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
         }
     }
 }
@@ -90,5 +86,23 @@
             opacity: 1;
             transition: opacity 300ms ease-in-out 200ms;
         }
+    }
+}
+@media only screen and (max-width: 900px) {
+    .sibebar{
+        max-width: 72px !important;
+        min-width: 72px !important;
+        .menu-item{
+            display: block;
+            .icon{
+                
+            }
+            .label{
+                display: none;
+            }
+        }
+    }
+    .resize-btn{
+        display: none;
     }
 }
