--- a/src/styles/global/form.scss
+++ b/src/styles/global/form.scss
@@ -46,3 +46,24 @@
         }
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .form{
+        padding: 10px;
+        .form-field{
+            font-size: .7rem;
+            margin: 5px 0;
+        }
+        .part-2, .part-3, .part-4{
+            .form-field{
+                width: 100%;
+                padding: 0px;
+            }
+        }
+        .submit-button{
+            button{
+                font-size: 1.2rem;
+            }
+        }
+    }
+}
