--- a/src/styles/global/variables.scss
+++ b/src/styles/global/variables.scss
@@ -14,6 +14,11 @@ $sidebar-bg: linear-gradient(to bottom, #0296d4 0%, #98efe7 100%);
 $page-title-color: #2fa695;
 $page-background-color: #dcdcdc;
 
+// sidebar width
+$sidebar-full-width: 240px;
+$sidebar-small-width: 72px;
+$sidebar-x-small-width: 40px;
+
 //font-size-px
 $size-px-0: 0px;
 $size-px-5: 5px;
