--- a/src/styles/components/setting.scss
+++ b/src/styles/components/setting.scss
@@ -60,8 +60,8 @@
 }
 
 .expendable-box{
-    border: 1px solid gray;
-    border-radius: 5px;
+    // border: 1px solid gray;
+    // border-radius: 5px;
     .header{
         background: #b0adad;
         text-align: center;
@@ -70,6 +70,8 @@
         padding: 15px; 
         display: block;
         cursor: pointer;
+        border: 1px solid gray;
+        border-radius: 5px;
     }
     .content{
         height: 0;
@@ -78,10 +80,19 @@
         transition: height 1s;
     }
     &.expanded{
+        .header{
+            border-bottom: 0px;
+            border-bottom-left-radius: 0px;
+            border-bottom-right-radius: 0px;
+        }
         .content{
             height: auto;
             padding: 10px;
             transition: height 1s;
+            border: 1px solid gray;
+            border-top: 0px;
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
         }
     }
 }
