--- a/src/styles/global/form.scss
+++ b/src/styles/global/form.scss
@@ -45,6 +45,12 @@
             margin: 10px 0;
         }
     }
+    .first{
+        padding-left: 0px !important; 
+    }
+    .last{
+        padding-right: 0px  !important;
+    }
 }
 
 @media only screen and (max-width: 600px) {
