--- a/src/styles/global/reactSearchInput.scss
+++ b/src/styles/global/reactSearchInput.scss
@@ -30,6 +30,7 @@
     padding: 10px 10px 10px 25px;
     height: 50px;
     position: relative;
+    border-radius: 5px;
   }
   
   .search-input > input:focus {
