--- a/src/styles/global/app.scss
+++ b/src/styles/global/app.scss
@@ -7,7 +7,7 @@ html, body {
   font-family: $font-family;
   font-size: $size-rem-1;
   font-weight: 500;
-  background:$page-background-color;
+  // background:$page-background-color;
 }
 
 .app{
@@ -60,10 +60,15 @@ html, body {
 .j-c-s-b{
   justify-content: space-between;
 }
-
-.nav-tabs {
-  border-bottom: 1px solid #fff;
+.loading{
+  text-align: center;
+  font-size: 1.5rem;
+  color: gray;
+  padding: 1rem;
 }
+// .nav-tabs {
+//   border-bottom: 1px solid #fff;
+// }
 h1{
   font-size: 2rem;
   margin: 15px 0;
