--- a/src/styles/global/customTable.scss
+++ b/src/styles/global/customTable.scss
@@ -14,6 +14,7 @@
         font-size: 1.3rem;
         span{
             padding: 0 5px;
+            cursor: pointer;
         }
     }
 }
@@ -23,7 +24,8 @@
         align-items: center;
         justify-content: space-between;
         padding: 25px 10px;
-        background:#fff;
+        // background:#fff;
+        background: #c3e4f6;
         margin: 30px 0;
         border-radius: 3px;
         min-width: 600px;
