--- a/src/styles/components/accounts.scss
+++ b/src/styles/components/accounts.scss
@@ -15,7 +15,7 @@
 .account-details{
     .banner{
         height: 400px;
-        background: #fff;
+        background: #f6f2f2;
         margin: 20px 0;
         .top-bg{
             background: #27acd9;
@@ -65,7 +65,7 @@
         .rect{
             width: 80%;
             background: #fff;
-            height: 282px;
+            height: 220px;
             display: block;
             min-width: 150px;
             max-width: 300px;
@@ -83,7 +83,7 @@
             padding-left: 10px;
         }
         .box{
-            background: #fff;
+            background: #f6f2f2;
             padding: 0px 0px 20px 20px;
             margin: 15px 0;
             border: 1px solid rgba(128, 128, 128, 0.52);
