points mentioned are resolved need review

--- a/src/styles/global/spacing.scss
+++ b/src/styles/global/spacing.scss
@@ -41,9 +41,16 @@
     display: flex;
     flex-basis: 100% !important;                    
   }
+  .f-2-rem{
+    flex-basis: 2rem !important;                    
+  }
   
   .f-100{
     display: flex;
     flex-basis: 100% !important;                    
+  }
+
+  .w-2-rem{
+    min-width: 2rem;
   }
  
