--- a/src/styles/components/accounts.scss
+++ b/src/styles/components/accounts.scss
@@ -1,4 +1,7 @@
 .accounts{
+    .content-header{
+        border-left: 5px solid transparent;
+    }
     .content-body{
         .card{
             border-left: 5px solid red;
