--- a/src/styles/global/customTable.scss
+++ b/src/styles/global/customTable.scss
@@ -21,26 +21,42 @@
 .content-body{
     overflow: hidden;
     .card{
-        display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 25px 10px;
-        // background:#fff;
+        padding: 15px 10px;
         background: #e0eff7;
-        margin: 30px 0;
+        margin: 15px 0;
         border-radius: 3px;
         min-width: 600px;
-        .checkbox-wrapper{
-            display: none;  
+        .parant{
+            display: flex;
+
+        }
+        .family{
+            display: flex;
+            overflow: hidden;
+            .member{
+                height: 0px;
+                transition: height .5s;
+            }
+        }
+        .checkbox-wrapper{ 
+            display: block;
+            opacity: 0; 
+            padding: 0px;
         }
         &:hover{
             background: #bee2f5;
             .checkbox-wrapper{
-                display: block;
+                opacity: 1;
             }
         }
         &.selected{
             background: #2996d0;
+            .member{
+                height: 50px;
+                transition: height .5s;
+            }
         }
         .cell{
             display: flex;
@@ -60,7 +76,7 @@
 }
 
 .come-in {
-    transform: translateY(100px);
+    transform: translateY(50px);
     animation: come-in 0.8s ease forwards;
   }
   .come-in:nth-child(odd) {
