responsive table structure done

--- a/src/styles/components/accounts.scss
+++ b/src/styles/components/accounts.scss
@@ -34,7 +34,7 @@
         }
         .menu-bar{
             height: 50px;
-            padding: 0 50px;
+            padding: 0 4%;
             .item{
                 display: inline-block;
                 width: 120px;
