--- a/src/styles/global/customTable.scss
+++ b/src/styles/global/customTable.scss
@@ -1,36 +1,47 @@
 .table-wrapper{
     display: block;
-    overflow: auto;
+    // overflow: auto;
 }
 .content-header{
     display: flex;
     justify-content: space-between;
     color: gray;
-    min-width: 600px;
     .cell{
         display: flex;
         flex-basis: 100%;
         align-items: center;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         span{
             padding: 0 5px;
             cursor: pointer;
         }
     }
+    .col-checkbox-header{
+        flex-basis: 1rem !important;
+        min-width: 1rem;
+    }
 }
 .content-body{
-    overflow: hidden;
+    overflow-y: hidden;
     .card{
         align-items: center;
         justify-content: space-between;
-        padding: 15px 10px;
         background: #e0eff7;
-        margin: 15px 0;
+        margin: 2% 0;
+        padding: 1% .50%;
         border-radius: 3px;
-        min-width: 600px;
+        .cell{
+            display: flex;
+            flex-basis: 100%;
+            align-items: center;
+            flex-wrap: wrap;
+            font-size: .8rem;
+            span{
+                padding: 0 3px;
+            }
+        }
         .parant{
             display: flex;
-
         }
         .family{
             display: flex;
@@ -40,10 +51,25 @@
                 transition: height .5s;
             }
         }
+        .col-checkbox{
+            flex-basis: 1rem !important;
+            min-width: 1rem;
+            justify-content: center;
+        }
         .checkbox-wrapper{ 
             display: block;
             opacity: 0; 
             padding: 0px;
+
+        }
+        .col-date{
+            .block{
+                display: block;
+                width: 100%;
+            }
+            span{
+                padding: 0px !important;
+            }
         }
         &:hover{
             background: #bee2f5;
@@ -53,19 +79,12 @@
         }
         &.selected{
             background: #2996d0;
+            .checkbox-wrapper{
+                opacity: 1;
+            }
             .member{
                 height: 50px;
                 transition: height .5s;
-            }
-        }
-        .cell{
-            display: flex;
-            flex-basis: 100%;
-            align-items: center;
-            flex-wrap: wrap;
-            font-size: 1rem;
-            span{
-                padding: 0 5px;
             }
         }
     }
@@ -102,10 +121,29 @@
     }
     .content-body{
         .card{
-            padding: 10px;
-            margin: 1rem 0;
             .cell{
                 font-size: .7rem;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .content-header{
+        .cell{
+            font-size: .8rem;
+        }
+    }
+    .content-body{
+        .card{
+            .col-date{
+                span{
+                    display: block;
+                    width: 100%;
+                }
+                .m-w-max-content{
+                    min-width: max-content;
+                }
             }
         }
     }
