--- a/src/styles/global/reactSearchInput.scss
+++ b/src/styles/global/reactSearchInput.scss
@@ -2,7 +2,8 @@
     padding: 10px 0;
     height: 52px;
     position: relative;
-    margin-bottom: 40px;
+    // margin-bottom: 40px;
+    margin-bottom: 5%;
   }
   .search-input::before {
     display: none;
