--- a/src/styles/components/invoice.scss
+++ b/src/styles/components/invoice.scss
@@ -4,10 +4,19 @@
         justify-content: center;
         margin: 2rem 0;
         button{
-            background: gray;
-            border: 0;
+            // background: gray;
+            // border: 0;
+            background: #fff;
+            border: 2px solid gray;
             padding: 10px 15px;
-            font-size: 1rem;   
+            font-size: 1rem; 
+            border-radius: 0px;
+
+        }
+        .btn-default:hover{
+            background-color: #74cdee;
+            border-color: #22a9d8;
+            color: #fff;
         }
     }
     .summary{
@@ -29,7 +38,7 @@
     .inoive-buttons{
         display: flex;
         justify-content: center;
-        margin: 2rem 0;
+        // margin: 2rem 0;
         button{
             background: #7ac033;
             border: 0;
@@ -44,13 +53,14 @@
 @media only screen and (max-width: 600px) {
     .invoice{
         .range-wrapper{
+            margin: 1rem 0;
             button{
                 padding: 5px 5px;
                 font-size: .7rem;   
             }
         }
         .summary{
-            margin: 1rem 0;
+            margin: 0;
         }
         .total{
             .amt{
