--- a/src/styles/global/app.scss
+++ b/src/styles/global/app.scss
@@ -36,6 +36,9 @@ html, body {
 }
 .page-title{
   color: $page-title-color;
+  h1{
+    margin-top: -10px;
+  }
 }
 .dot{
   height: 10px;
@@ -84,14 +87,19 @@ h1{
   font-size: 2rem;
   margin: 15px 0;
 }
-
-@media only screen and (max-width: 900px) {
+.collapsed{
   .main-page{
     margin-left: $sidebar-small-width;
   }
 }
+
+@media only screen and (max-width: 900px) {
+  .collapsed .main-page, .main-page{
+    margin-left: $sidebar-small-width;
+  }
+}
 @media only screen and (max-width: 600px) {
-  .main-page{
+  .collapsed .main-page, .main-page{
     margin-left: $sidebar-x-small-width;
   }
   h1{
