--- a/src/styles/global/customTable.scss
+++ b/src/styles/global/customTable.scss
@@ -50,13 +50,13 @@
         margin: 1.5% 0;
         border-radius: 3px;
         display: flex;
-        transition: height 1s;
+        overflow: hidden;
+        transition: height .5s;
         .row-content{
             flex-basis: 100%;
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
-            padding: 10px 0;
         }
         .cell{
             display: flex;
@@ -70,13 +70,14 @@
         }
         .parant{
             display: flex;
+            padding: 10px 0;
         }
         .family{
             display: flex;
             overflow: hidden;
+            padding: 10px 0;
             .member{
-                height: 0px;
-                transition: height .5s;
+                margin: 10px 0;
             }
         }
         .checkbox-wrapper{ 
@@ -136,12 +137,7 @@
             .checkbox-wrapper{
                 opacity: 1;
             }
-            .member{
-                height: 50px;
-                transition: height .5s;
-            }
             .detail-page-link{
-                border-bottom: 1px solid;
                 border-color: #22a5ea;
                 background: rgba(169, 191, 203, 0.55);
             }
