--- a/src/styles/global/sidebar.scss
+++ b/src/styles/global/sidebar.scss
@@ -201,6 +201,11 @@
                 font-size: 1rem;
             }
         }
+        .menu-bottom{
+            .menu-item{
+                padding: 0px;
+            }
+        }
         .logo-wrapper{
             height: 40px;
             width: 40px;
