--- a/src/styles/global/customTable.scss
+++ b/src/styles/global/customTable.scss
@@ -88,6 +88,9 @@
 
         }
         .col-name{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: baseline;
             .profile-image{
                 font-size: 1rem;
             }
@@ -143,6 +146,11 @@
                 background: rgba(169, 191, 203, 0.55);
             }
         }
+    }
+    .no-data-card{
+        border: 0px !important;
+        padding: 20px;
+
     }
 }
 
