--- a/src/styles/global/reactSearchInput.scss
+++ b/src/styles/global/reactSearchInput.scss
@@ -38,3 +38,14 @@
   .search-input > input:focus {
     outline: none;
   }
+
+  @media only screen and (max-width: 600px) {
+    .search-input > input {
+      font-size: 16px;
+    }
+  }
+  @media only screen and (max-width: 450px) {
+    .search-input > input {
+      font-size: 13px;
+    }
+  }
